--- a/index.html
+++ b/index.html
@@ -9,23 +9,34 @@
 </head>
 <body>
 
-  <section class="d-flex justify-content-center">
+  <section class="d-flex justify-content-center mt-5">
     <div class="bg-light w-50 h-50 d-flex flex-column mb-3 d-inline-flex p-2 d-flex align-items-center">
       <div><h1>A warm wecome!</h1></div>
       <div><p>bootstrap utility classes are used to create this jumbotron since the old component has been removed from the framework. why crate custom CSS when you can use utilities?</p></div>
-      <div><button type="button" class="btn btn-primary btn-lg">Large button</button></div>
+      <div><button type="button" class="btn btn-primary btn-lg">call to action</button></div>
     </div>
 </section>
-    <div class="d-inline-flex p-2 d-flex justify-content-around">
+    <div class="d-inline-flex p-2 d-flex justify-content-around mt-5 text">
       <div class="bg-light w-25">
+        <div class="icon"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-collection icons border border-1 rounded-2" viewBox="0 0 16 16">
+          <path d="M2.5 3.5a.5.5 0 0 1 0-1h11a.5.5 0 0 1 0 1zm2-2a.5.5 0 0 1 0-1h7a.5.5 0 0 1 0 1zM0 13a1.5 1.5 0 0 0 1.5 1.5h13A1.5 1.5 0 0 0 16 13V6a1.5 1.5 0 0 0-1.5-1.5h-13A1.5 1.5 0 0 0 0 6zm1.5.5A.5.5 0 0 1 1 13V6a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-.5.5z"/>
+        </svg></div>
         <h3>fresh new layout</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa facere voluptates ad! Blanditiis, maiores aliquid!</p>
       </div>
       <div class="bg-light w-25">
+        <div class="icon"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cloud-download icons border border-1 rounded-2" viewBox="0 0 16 16">
+          <path d="M4.406 1.342A5.53 5.53 0 0 1 8 0c2.69 0 4.923 2 5.166 4.579C14.758 4.804 16 6.137 16 7.773 16 9.569 14.502 11 12.687 11H10a.5.5 0 0 1 0-1h2.688C13.979 10 15 8.988 15 7.773c0-1.216-1.02-2.228-2.313-2.228h-.5v-.5C12.188 2.825 10.328 1 8 1a4.53 4.53 0 0 0-2.941 1.1c-.757.652-1.153 1.438-1.153 2.055v.448l-.445.049C2.064 4.805 1 5.952 1 7.318 1 8.785 2.23 10 3.781 10H6a.5.5 0 0 1 0 1H3.781C1.708 11 0 9.366 0 7.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-2.383"/>
+          <path d="M7.646 15.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 14.293V5.5a.5.5 0 0 0-1 0v8.793l-2.146-2.147a.5.5 0 0 0-.708.708z"/>
+        </svg></div>
         <h3>free to download</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit sed ipsa adipisci quod vel nemo!</p>
       </div>
       <div class="bg-light w-25">
+        <div class="icon"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-card-text icons border border-1 rounded-2" viewBox="0 0 16 16">
+          <path d="M14.5 3a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2z"/>
+          <path d="M3 5.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5M3 8a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 8m0 2.5a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5"/>
+        </svg></div>
         <h3>jumbotron hero header</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut, reprehenderit.</p>
       </div>
